@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://kit.fontawesome.com/aad9c413a7.js" crossorigin="anonymous"></script>
-    <script src = "static/app.js"></script>
+    <script src="static/app.js"></script>
     <title>{{ the_title }}</title>
 </head>
 <body>
