@@ -42,6 +42,7 @@
 + Implement drag & drop for carts on the Order page.
 + Add cart number for RemoveAll alert.
 + Change title for the Main page.
+- Fix multiple lines in card bodies on the Order page.
 
 *****************
 * Release 0.2.3 *
